@@ -1,5 +1,6 @@
 2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
 	* add qresources
+	* make sourceWidget abstract
 	* tagged as 0.14.0
 
 2018-01-24 Jan Kotanski <jan.kotanski@desy.de>
